--- a/2-checkout/package.json
+++ b/2-checkout/package.json
@@ -23,7 +23,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "uuid": "^8.3.2",
-    "webpack": "^5.41.0",
-    "webpack-cli": "^4.7.2"
+    "webpack": "^5.41.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.0.1"
   }
 }
